// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordPane calls \`swap\` when checkbox is clicked 1`] = `
[
  "updateEntity",
  "lock",
  1,
  undefined,
  true,
]
`;

exports[`PasswordPane calls \`swap\` when password changes 1`] = `
[
  "updateEntity",
  "lock",
  1,
  "setPassword",
  "newPassword",
  "policy",
]
`;

exports[`PasswordPane disables input when submitting 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-input-block auth0-lock-input-show-password"
  >
    <div
      data-__type="password_input"
      data-disabled="true"
      data-invalidhint="invalidErrorHint"
      data-isvalid="false"
      data-lock="[object Object]"
      data-placeholder="placeholder"
      data-policy="policy"
      data-showpassword="showPassword"
      data-showpasswordstrengthmessage="false"
      data-strengthmessages="[object Object]"
      data-value="password"
    />
  </div>
</DocumentFragment>
`;

exports[`PasswordPane renders correct css className when \`hidden\` is true 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-input-block auth0-lock-input-show-password auth0-lock-hidden"
  >
    <div
      data-__type="password_input"
      data-disabled="false"
      data-invalidhint="invalidErrorHint"
      data-isvalid="false"
      data-lock="[object Object]"
      data-placeholder="placeholder"
      data-policy="policy"
      data-showpassword="showPassword"
      data-showpasswordstrengthmessage="false"
      data-strengthmessages="[object Object]"
      data-value="password"
    />
  </div>
</DocumentFragment>
`;

exports[`PasswordPane renders correctly 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-input-block auth0-lock-input-show-password"
  >
    <div
      data-__type="password_input"
      data-disabled="false"
      data-invalidhint="invalidErrorHint"
      data-isvalid="false"
      data-lock="[object Object]"
      data-placeholder="placeholder"
      data-policy="policy"
      data-showpassword="showPassword"
      data-showpasswordstrengthmessage="false"
      data-strengthmessages="[object Object]"
      data-value="password"
    />
  </div>
</DocumentFragment>
`;

exports[`PasswordPane renders correctly when \`allowShowPassword\` is true 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-input-block auth0-lock-input-show-password"
  >
    <div
      data-__type="password_input"
      data-disabled="false"
      data-invalidhint="invalidErrorHint"
      data-isvalid="false"
      data-lock="[object Object]"
      data-placeholder="placeholder"
      data-policy="policy"
      data-showpassword="showPassword"
      data-showpasswordstrengthmessage="false"
      data-strengthmessages="[object Object]"
      data-value="password"
    />
    <div
      class="auth0-lock-show-password"
    >
      <input
        id="slideOne"
        type="checkbox"
      />
      <label
        for="slideOne"
        title="showPassword"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PasswordPane sets \`blankErrorHint\` when password is empty 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-input-block auth0-lock-input-show-password"
  >
    <div
      data-__type="password_input"
      data-disabled="false"
      data-invalidhint="blankErrorHint"
      data-isvalid="false"
      data-lock="[object Object]"
      data-placeholder="placeholder"
      data-policy="policy"
      data-showpassword=""
      data-showpasswordstrengthmessage="false"
      data-strengthmessages="[object Object]"
      data-value=""
    />
  </div>
</DocumentFragment>
`;

exports[`PasswordPane sets isValid as true when \`isFieldVisiblyInvalid\` is false 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-input-block auth0-lock-input-show-password"
  >
    <div
      data-__type="password_input"
      data-disabled="false"
      data-invalidhint="invalidErrorHint"
      data-isvalid="true"
      data-lock="[object Object]"
      data-placeholder="placeholder"
      data-policy="policy"
      data-showpassword="showPassword"
      data-showpasswordstrengthmessage="false"
      data-strengthmessages="[object Object]"
      data-value="password"
    />
  </div>
</DocumentFragment>
`;

exports[`PasswordPane sets showPasswordStrengthMessage as false when \`isFieldValid\` is true 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-input-block auth0-lock-input-show-password"
  >
    <div
      data-__type="password_input"
      data-disabled="false"
      data-invalidhint="invalidErrorHint"
      data-isvalid="false"
      data-lock="[object Object]"
      data-placeholder="placeholder"
      data-policy="policy"
      data-showpassword="showPassword"
      data-showpasswordstrengthmessage="false"
      data-strengthmessages="[object Object]"
      data-value="password"
    />
  </div>
</DocumentFragment>
`;

exports[`PasswordPane sets showPasswordStrengthMessage as true when \`isFieldValid\` is false 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-input-block auth0-lock-input-show-password"
  >
    <div
      data-__type="password_input"
      data-disabled="false"
      data-invalidhint="invalidErrorHint"
      data-isvalid="false"
      data-lock="[object Object]"
      data-placeholder="placeholder"
      data-policy="policy"
      data-showpassword="showPassword"
      data-showpasswordstrengthmessage="true"
      data-strengthmessages="[object Object]"
      data-value="password"
    />
  </div>
</DocumentFragment>
`;
